# FocuS

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  stderr.txt  vite.config.ts
src/: App.svelte  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: acrylic.rs  config.rs  cursor.rs  hotkey.rs  icons.rs  lib.rs  main.rs  tray.rs  window.rs
src-tauri/src/plugins/: runtime.rs
src-tauri/src/scanner/: apps.rs  commands.rs  files.rs  mod.rs
src-tauri/src/search/: commands.rs  engine.rs  matcher.rs  mod.rs  provider.rs
src/assets/styles/: global.css  wheel.css
src/components/search/: ResultItem.svelte  ResultList.svelte  SearchBar.svelte  SearchInput.svelte
src/components/settings/: AppearanceSettings.svelte  SettingsPanel.svelte  WheelEditor.svelte
src/components/wheel/: RadialWheel.svelte  WheelCanvas.svelte  WheelCenter.svelte  WheelOverlay.svelte
src/lib/: commands.ts  stores.ts  types.ts  wheel.ts
