[package]
name = "focus"
version = "0.1.0"
description = "Global Quick Search & App Launcher"
authors = ["Eason"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "focus_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
nucleo = "0.5"
tokio = { version = "1", features = ["full"] }
dirs = "6"
glob = "0.3"
notify = { version = "7", features = ["macos_kqueue"] }
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"        # Optimize for size
strip = true
